--- a/overlays/studio_top_left.yml
+++ b/overlays/studio_top_left.yml
@@ -1,9 +1,12 @@
-type: image
-url: https://raw.githubusercontent.com/s0len/meta-manager-config/main/overlays/studio-top-left/<<key>>.png
-horizontal_align: left
-horizontal_offset: 0
-vertical_align: top
-vertical_offset: 0
-back_width: 1000
-back_height: 1500
-back_color: 00
+overlays:
+  studio_top_left:
+    pmm: studio
+    template_variables:
+      url: https://raw.githubusercontent.com/Bhuynher1/Kometa-Manager/blob/main/overlays/studio-top-left/<<key>>.png
+      horizontal_align: left
+      horizontal_offset: 0
+      vertical_align: top
+      vertical_offset: 0
+      back_width: 1000
+      back_height: 1500
+      back_color: "00"
