--- a/collection-files/Transformers_Collection.yml
+++ b/collection-files/Transformers_Collection.yml
@@ -6,9 +6,9 @@ collections:
     collection_order: release
     summary: >
       A high-octane action franchise about the battle between the Autobots and Decepticons, spanning multiple generations of robots and humanity.
-    tmdb_collection: 8650
-    radarr_add: true
-    radarr_search: true
+        tmdb_movie:
+      - tmdb: 667538      # Transformers: Rise of the Beasts (2023)
+      - tmdb: 698687      # Transformers One (2024)
     visible_library: true
     visible_home: true
     visible_shared: true
