--- a/overlays/background_top_left_313_wide.yml
+++ b/overlays/background_top_left_313_wide.yml
@@ -1,8 +1,11 @@
 overlays:
 ## Creates a black background ribbon in the top left corner
-  Background:
+  Resolution Background:
     overlay:
       name: top-left-313-wide
-      url: https://raw.githubusercontent.com/s0len/meta-manager-config/main/overlays/background/top-left-313-wide.png
-      weight: 2
+      url: https://raw.githubusercontent.com/Bhuynher1/Kometa-Manager/main/overlays/background/top-left-313-wide.png
+      weight: 1
+      group: resolution
+      on_top: false
+      allow_multiple: true
     plex_all: true
